# 2P2S

./: .gitignore  parameters.me
App/: config.js  package-lock.json  package.json
App/src/: index.html  main.js  styles.css
App/src-tauri/: Cargo.toml  tauri.conf.json
App/src-tauri/src/: main.rs
App/src-tauri/src/module/: media.rs  runtime.rs  signal.rs
App/src/module/: constants.js  logger.js  media.js  signal.js  state.js  ui.js
Gin/: go.mod  go.sum  main.go
